# linux

./: .get_maintainer.ignore  .gitignore  .gitlab-ci.yml  .mailmap  Benefits  CONTRIBUTING  CREDITS  Details  FutureWorks  Introduction  Kbuild  LICENSE  MAINTAINERS  Makefile  ModificationScope  README  Results  dduper  event.c  ibss.c  interface.c  localversion-next  max7360.txt  pslots.sh  pv_interrupt_controller.c  rotate.c  station.c  vhost-pci.patch
Documentation/: 00-INDEX  CodingStyle  DMA-API-HOWTO.txt  DMA-API.txt  DMA-ISA-LPC.txt  DMA-attributes.txt  HOWTO  IRQ-domain.txt  IRQ-ipi.txt  Makefile  Makefile.reST  Makefile.sphinx  SubmittingPatches  atomic_ops.txt  binfmt_misc.txt  bt-i2c.txt  cachetlb.txt  cgroup-v2.txt  clk.txt  conf.py  cpu-hotplug.txt  dell_rbu.txt  dynamic-debug-howto.txt  email-clients.txt  gcc-plugins.txt  hsi.txt  index.rst  kasan.txt  kcov.txt  kernel-doc-nano-HOWTO.txt  kernel-docs.txt  kernel-documentation.rst  kernel-dot-emacs.txt  kernel-parameters.txt  kprobes.txt  kselftest.txt  malloc-watchdog.txt  md.txt  memory-barriers.txt  memory-hotplug.txt  (+27 more)
Next/: SHA1s  Trees
arch/: Kconfig
atsc/: ca-ON-Toronto
block/: Kconfig  Kconfig.iosched  Makefile  badblocks.c  bfq-cgroup.c  bfq-iosched.c  bfq-iosched.h  bfq-wf2q.c  bfq.h  bio-integrity.c  bio.c  blk-cgroup.c  blk-core.c  blk-exec.c  blk-flush.c  blk-integrity.c  blk-ioc.c  blk-iolatency.c  blk-lib.c  blk-map.c  blk-merge.c  blk-mq-cpumap.c  blk-mq-debugfs.c  blk-mq-debugfs.h  blk-mq-rdma.c  blk-mq-sched.c  blk-mq-sched.h  blk-mq-sysfs.c  blk-mq-tag.c  blk-mq-tag.h  blk-mq.c  blk-mq.c.rej  blk-mq.h  blk-rq-qos.h  blk-sec-buf.c  blk-settings.c  blk-softirq.c  blk-stat.c  blk-stat.h  blk-sysfs.c  (+24 more)
certs/: Kconfig  Makefile  blacklist.c  system_certificates.S  system_keyring.c
crypto/: 842.c  Kconfig  Makefile  ablk_helper.c  ablkcipher.c  acompress.c  aead.c  aead_api.c  aes_generic.c  af_alg.c  ahash.c  akcipher.c  algapi.c  algif_aead.c  (+66 more)
tools/usb/usbip/libsrc/: Makefile.am  list.h  names.c  usbip_common.c  usbip_common.h  usbip_device_driver.c  usbip_host_common.c  usbip_host_common.h  usbip_host_driver.c  usbip_host_driver.h  usbip_ux.c  usbip_ux.h  vhci_driver.c  vhci_driver.h
tools/usb/usbip/src/: Makefile.am  usbip.c  usbip.h  usbip_attach.c  usbip_bind.c  usbip_connect.c  usbip_detach.c  usbip_disconnect.c  usbip_list.c  usbip_netconn.c  usbip_network.c  usbip_network.h  usbip_port.c  usbip_unbind.c  usbipd.c  usbipd.h  usbipd_app.c  usbipd_dev.c  utils.c  utils.h
(+31370 files in other folders)
